--- a/mTLS/nginx_conf/nginx.conf
+++ b/mTLS/nginx_conf/nginx.conf
@@ -34,14 +34,15 @@ http {
 
     server {
         listen 443 ssl;
-        server_name localhost;
+        server_name localhost 192.168.0.11;
 
-        ssl_certificate      /path_to/mTLS/server.crt;
+        ssl_certificate      /path_to/mTLS/server_fullchain.crt;
         ssl_certificate_key  /path_to/mTLS/server.key;
 
-        ssl_client_certificate /path_to/mTLS/ca.crt;
+        ssl_client_certificate /path_to/mTLS/ca_bundle.crt;
         ssl_verify_client on;  # require client cert
         ssl_verify_depth 2;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
@@ -51,7 +52,8 @@ http {
 		# 	index index.html;
 		# }
 
-		location / {
+		location /api {
+		    default_type application/json;
             return 200 "Hello, mTLS client!\n";
             # forward cert to backend if you want the app logic to inspect fields
             # proxy_set_header X-SSL-Client-Cert $ssl_client_cert;
